# vef

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-crates.toml  rust-toolchain.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/vef/: Cargo.toml  LICENSE-MIT  README.md
crates/vef-core/: Cargo.toml  README.md
crates/vef-core/src/: lib.rs
crates/vef-hpack/: Cargo.toml  README.md
crates/vef-hpack/src/: lib.rs
crates/vef-http1/: Cargo.toml  README.md
crates/vef-http1/src/: lib.rs
crates/vef-http2/: Cargo.toml  README.md
crates/vef-http2/src/: lib.rs
crates/vef-io/: Cargo.toml  README.md
crates/vef-io/src/: lib.rs
crates/vef/src/: lib.rs
docs/: ARCHITECTURE.md  CONFORMANCE.md  CRATE_VERSION_MATRIX.md  IMPLEMENTATION_PLAN.md  RELEASE_PLAN.md  SCOPE.md  TESTING.md  VERSION_PLAN.md  github-security-settings.md  modularity-policy.md  platform-support.md  rfc-source-policy.md  security-controls.md  supply-chain-security.md  threat-model.md  toolchain-policy.md  unsafe-policy.md
fuzz/: README.md
interop/: README.md
references/: README.md
release-notes/: RELEASE_NOTES_0.1.0.md
rfc/: README.md  SHA256SUMS  SOURCES
sbom/: vef.spdx.json
scripts/: check-rust-version-matrix.sh  check_dependency_policy.py  check_doc_links.sh  check_latest_tools.sh  check_packages.sh  check_shell_syntax.sh  checks.sh  compare_sbom.py  fetch-rfcs.sh  generate-sbom.sh  lock-rfcs.sh  release_0_1_gate.sh  update-rfc-checksums.sh  validate-modularity-policy.sh  validate-release-metadata.sh  validate-release-plan.py  validate-release-readiness.sh  validate-security-policy.sh  verify-rfcs.sh
security/pentest/: README.md
spec/: manifest.toml
spec/decisions/: README.md  rfc9298-connect-udp.md
spec/errata/: README.md
spec/requirements/: README.md
spec/schema/: requirement-example.toml
tests/adversarial/: README.md
tests/conformance/: README.md
tests/fragmentation/: README.md
tests/interoperability/: README.md
tests/regression/: README.md
tools/: README.md
