[workspace]
members = [
    "crates/vef",
    "crates/vef-core",
    "crates/vef-hpack",
    "crates/vef-http1",
    "crates/vef-http2",
    "crates/vef-io",
]
default-members = ["crates/vef"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
authors = ["VEF contributors"]
homepage = "https://github.com/valkyoth/vef"
repository = "https://github.com/valkyoth/vef"
readme = "README.md"
keywords = ["http", "no-std", "protocol", "sans-io", "security"]
categories = ["network-programming", "no-std"]

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[profile.release]
overflow-checks = true
panic = "abort"
