[package]
name = "vef-hpack"
description = "Dependency-free, bounded HPACK codec for VEF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "README.md", "LICENSE-*", "src/**"]

[dependencies]
vef-core = { path = "../vef-core", version = "=0.1.0" }

[lints]
workspace = true
