[package]
name = "vef-http2"
description = "Dependency-free HTTP/2 framing and state engines for VEF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "README.md", "LICENSE-*", "src/**"]

[dependencies]
vef-core = { path = "../vef-core", version = "=0.1.0" }
vef-hpack = { path = "../vef-hpack", version = "=0.1.0" }

[lints]
workspace = true
